# breadboard-os

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  project.cmake
hardware/rp2040/: CMakeLists.txt  hardware_config.c  hardware_config.h  onboard_led.c
platform/: CMakeLists.txt  README.md  hal.c  hal.h
platform/rp2040/: CMakeLists.txt  hal.c  platform_include.cmake
platform/rp2040/include/: FreeRTOSConfig.h  lwipopts.h
services/: CMakeLists.txt  cli_service.c  services.c  services.h  taskman_service.c  wifi_service.c
